# electionguard-python

./: .coveragerc  .env  .gitignore  .pydocstylerc  .pylintrc  404.html  CONTRIBUTING.md  ENGINEERING_NOTES.md  Makefile  Pipfile  README.md  generate-pdf.js  get-pip.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  run_simple_election.sh  search.html  setup.py  sitemap.xml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue_template.md
.github/workflows/: codeql-analysis.yml  on_demand.yml  pull_request.yml  release.yml  tests.yml
0_Configure_Election/: index.html
1_Key_Ceremony/: index.html
2_Encrypt_Ballots/: index.html
3_Cast_and_Spoil/: index.html
4_Decrypt_Tally/: index.html
5_Publish_and_Verify/: index.html
Build_and_Run/: index.html
Design_and_Architecture/: index.html
Election_Manifest/: index.html
Project_Workflow/: index.html
bench/: bench_chaum_pedersen.py
data/: ballot_in_simple.json  election_manifest_simple.json  manifest-full.json  manifest-hamilton-general.json  manifest-min.json  manifest-minimal.json  manifest-small.json  plaintext_ballots_simple.json  plaintext_two_ballots_minimal.json  plaintext_two_ballots_small.json
data/5-ballots/: context.json  encrypted_tally.json  tally.json
data/5-ballots-threshold/: context.json  description.json  encrypted_tally.json  tally.json
data/5-ballots-threshold/devices/: device_190070690681122.json  device_268678284863259.json
data/hamilton-county/: election_manifest.json
data/simple/: context.json  submitted_ballot_03a29d15-667c-4ac8-afd7-549f19b8e4eb.json  submitted_ballot_1048ce32-f1b1-4b05-b7fb-8c615ac842ee.json  submitted_ballot_25a7111b-4334-425a-87c1-f7a49f42b3a2.json  submitted_ballot_5a150c74-a2cb-47f6-b575-165ba8a4ce53.json  submitted_ballot_69aeacb4-64c6-4205-9bb2-5fb6b3b3ea58.json  submitted_ballot_9fee0e77-cfd2-401a-a210-93bbc4dd30ef.json
docs/: 0_Configure_Election.ipynb  0_Configure_Election.md  0_Election_Configuration.md  1_Key_Ceremony.md  2_Encrypt_Ballots.md  3_Cast_and_Spoil.md  3_ballot_box.md  4_Decrypt_Tally.md  4_decrypt.md  5_Publish_and_Verify.md  Build_and_Run.md  Design_and_Architecture.md  Election_Manifest.md  Project_Workflow.md  Tablet Setup.md  index.md
docs/sample/: election-manifest.json
electionguard/: setup.py
electionguard/tests/: test_group.py
search/: search_index.json
src/electionguard/: GMPY_NOTES.md  __init__.py  auxiliary.py  auxiliary_key_pair.py  ballot.py  ballot_box.py  ballot_code.py  ballot_compact.py  ballot_store.py  ballot_validator.py  big_integer.py  byte_padding.py  chaum_pedersen.py  constants.py  contest.py  data_store.py  decrypt.py  decrypt_with_secrets.py  decrypt_with_shares.py  decryption.py  decryption_mediator.py  decryption_share.py  discrete_log.py  dlog.py  election.py  election_builder.py  election_description_schema.json  election_key_pair.py  election_object_base.py  election_polynomial.py  elgamal.py  encode.py  encrypt.py  encryption_compositor.py  group.py  guardian.py  hash.py  hmac.py  is_valid.py  key_ceremony.md  (+28 more)
src/electionguard_cli/: __init__.py  e2e.py  electionguard_cli.py  hello.py  print_utils.py  readme.md  setup.py  start.py  start.sh
src/electionguard_db/: docker-compose.db.yml  mongo-init.js
src/electionguard_gui/: .dockerignore  .env.dev  Dockerfile  __init__.py  authorization_service.py  component_base.py  containers.py  create_key_ceremony_component.py  create_key_component.py  docker-compose.yml  eel_utils.py  guardian_home_component.py  key_ceremony_details_component.py  main_app.py  setup_election_component.py  start.py
src/electionguard_tools/: __init__.py
src/electionguard_verify/: __init__.py  verify.py  verify_ballot.py
src/electionguardtest/: ballot_factory.py  contest.py  decryption_helper.py  election.py  election_factory.py  elgamal.py  export.py  group.py  identity_encrypt.py  key_ceremony_helper.py  sample_generator.py  serialize.py  tally.py
src/electionguardtools/: __init__.py
stubs/: gmpy2.pyi
tests/: ballot_box.py  base_test_case.py  generate_test_vectors.py  group_test.py  test_ballot.py  test_ballot_box.py  test_ballot_factory.py  test_ballot_store.py  test_chaum_pedersen.py  test_contest.py  test_decrypt.py  test_decrypt_with_secrets.py  test_decryption_mediator.py  test_dlog.py  test_election.py  test_election_polynomial.py  test_elgamal.py  test_encrypt.py  test_encrypt_hypotheses.py  test_encryption_compositor.py  test_group.py  test_guardian.py  test_hash.py  test_key_ceremony.py  test_key_ceremony_mediator.py  test_logs.py  test_mediator.py  test_nonces.py  test_publish.py  test_random.py  test_rsa.py  test_scheduler.py  test_schema.py  test_schnorr.py  test_serializable.py  test_singleton.py  test_tally.py  test_tracker.py  test_utils.py  test_words.py
tests/bench/: bench_chaum_pedersen.py  bench_pow_radix.py
tests/data/: ballot_in.json  election_manifest.json
tests/hamilton-county/: test_hamilton_county_election.py
tests/integration/: test_create_schema.py  test_end_to_end_election.py  test_functional_key_ceremony.py  test_hamilton_county_election.py  test_key_ceremony.py
tests/property/: test_ballot.py  test_chaum_pedersen.py  test_decrypt_with_secrets.py  test_decryption_mediator.py  test_discrete_log.py  test_dlog.py  test_elgamal.py  test_encrypt.py  test_encrypt_hypotheses.py  test_group.py  test_hash.py  test_nonces.py  test_powradix.py  test_schnorr.py  test_tally.py  test_verify.py
tests/unit/: test_ballot.py  test_ballot_box.py  test_ballot_code.py  test_ballot_compact.py  test_baseelement.py  test_constants.py  test_decrypt_with_shares.py  test_decryption.py  test_election.py  test_election_polynomial.py  test_elgamal.py  test_encoding.py  test_encrypt.py  test_guardian.py  test_hmac.py  test_key_ceremony.py  test_key_ceremony_mediator.py  test_logs.py  test_manifest.py  test_publish.py  test_rsa.py  test_scheduler.py  test_schema.py  test_serializable.py  test_singleton.py  test_tracker.py  test_utils.py  test_words.py
(+352 files in other folders)
